--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/es_MX.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/es_MX.json
@@ -70,6 +70,7 @@
     "HeaderSelectCertificatePath": "Seleccione Trayectoria del Certificado",
     "ConfirmMessageScheduledTaskButton": "Esta operaci\u00f3n normalmente es ejecutada autom\u00e1ticamente como una tarea programada. Tambi\u00e9n puede ser ejecutada manualmente desde aqu\u00ed. Para configurar la tarea programada, vea:",
     "HeaderSupporterBenefit": "La membres\u00eda de aficionado proporciona beneficios adicionales tales como acceso a complementos premium, contenido de canales de Internet y m\u00e1s. {0}Conocer m\u00e1s{1}.",
+    "LabelSyncNoTargetsHelp": "Parece que actualmente no cuentas con ninguna app que soporte sinc.",
     "HeaderWelcomeToMediaBrowserServerDashboard": "Bienvenido al Panel de Control de Media Browser",
     "HeaderWelcomeToMediaBrowserWebClient": "Bienvenido al Cliente Web de Media Browser",
     "ButtonTakeTheTour": "Haga el recorrido",
@@ -83,6 +84,7 @@
     "ButtonCancelItem": "Cancelar \u00edtem.",
     "ButtonQueueForRetry": "En cola para reintentar",
     "ButtonReenable": "Re-habilitar",
+    "ButtonLearnMore": "Aprenda m\u00e1s",
     "SyncJobItemStatusSyncedMarkForRemoval": "Marcado para remover",
     "LabelAbortedByServerShutdown": "(Abortada por apagado del servidor)",
     "LabelScheduledTaskLastRan": "Ejecutado hace {0}, tomando {1}.",
@@ -644,6 +646,7 @@
     "WebClientTourUserPreferences4": "Configure im\u00e1genes de fondo, canciones de tema y reproductores externos",
     "WebClientTourMobile1": "El cliente web funciona de maravilla en tel\u00e9fonos inteligentes y tabletas...",
     "WebClientTourMobile2": "y controla f\u00e1cilmente otros dispositivos y apps de Media Browser",
+    "WebClientTourMySync": "Sincronice sus medios personales a sus dispositivos para reproducirlos fuera de l\u00ednea.",
     "MessageEnjoyYourStay": "Disfrute su visita",
     "DashboardTourDashboard": "El panel de control del servidor le permite monitorear su servidor y sus usuarios. Siempre sabr\u00e1 quien est\u00e1 haciendo qu\u00e9 y donde se encuentran.",
     "DashboardTourHelp": "La ayuda dentro de la app proporciona botones simples para abrir p\u00e1ginas de la wiki relacionadas con el contenido en pantalla.",
@@ -655,6 +658,7 @@
     "DashboardTourNotifications": "Env\u00ede notificaciones automatizadas de eventos del servidor a sus dispositivos m\u00f3viles, correo electr\u00f3nico y m\u00e1s.",
     "DashboardTourScheduledTasks": "Administre f\u00e1cilmente operaciones de larga duraci\u00f3n con tareas programadas. Decida cuando se ejecutar\u00e1n y con que periodicidad.",
     "DashboardTourMobile": "El Panel de Control de Media Browser funciona excelentemente en tel\u00e9fonos inteligentes y tabletas. Administre su servidor desde la palma de su mano en todo momento y lugar.",
+    "DashboardTourSync": "Sincronice sus medios personales a sus dispositivos para reproducirlos fuera de l\u00ednea.",
     "MessageRefreshQueued": "Actualizaci\u00f3n programada",
     "TabDevices": "Dispositivos",
     "TabExtras": "Extras",
