--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/fr.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/fr.json
@@ -70,6 +70,7 @@
     "HeaderSelectCertificatePath": "S\u00e9lectionnez le chemin du certificat",
     "ConfirmMessageScheduledTaskButton": "Cette op\u00e9ration s'ex\u00e9cute normalement automatiquement en tant que t\u00e2che planifi\u00e9e. Elle peut aussi \u00eatre ex\u00e9cut\u00e9e manuellement ici. Pour configurer la t\u00e2che planifi\u00e9e, voir:",
     "HeaderSupporterBenefit": "Un partenariat de membre supporteur apporte des avantages suppl\u00e9mentaires, comme l'acc\u00e8s aux plugins premiums, aux contenus des cha\u00eenes Internet, et plus encore. {0}En savoir plus{1}.",
+    "LabelSyncNoTargetsHelp": "Il semble que vous n'ayez actuellement aucune application qui supporte la synchronisation.",
     "HeaderWelcomeToMediaBrowserServerDashboard": "Bienvenue dans le centre de contr\u00f4le de Media browser",
     "HeaderWelcomeToMediaBrowserWebClient": "Bienvenue sur le client web de Media Browser",
     "ButtonTakeTheTour": "Visite guid\u00e9e",
@@ -83,6 +84,7 @@
     "ButtonCancelItem": "Annuler l'\u00e9l\u00e9ment",
     "ButtonQueueForRetry": "File d'attente pour une nouvelle tentative",
     "ButtonReenable": "R\u00e9activer",
+    "ButtonLearnMore": "En savoir plus",
     "SyncJobItemStatusSyncedMarkForRemoval": "Marquer pour suppression",
     "LabelAbortedByServerShutdown": "(Annul\u00e9 par fermeture du serveur)",
     "LabelScheduledTaskLastRan": "Derni\u00e8re ex\u00e9cution {0}, dur\u00e9e {1}.",
@@ -97,7 +99,7 @@
     "HeaderSelectSubtitles": "S\u00e9lectionner sous-titres",
     "ButtonMarkForRemoval": "Supprimer de l'appareil",
     "ButtonUnmarkForRemoval": "Annuler la suppression de l'appareil",
-    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and low quality will reduce the allowed bitrate. Original will sync the original file, regardless of whether the device is capable of playing it or not.",
+    "LabelSyncQualityHelp": "Utilisez haute qualit\u00e9 pour obtenir la qualit\u00e9 maximale support\u00e9e par l'appareil. Moyenne et basse qualit\u00e9 r\u00e9duiront le d\u00e9bit autoris\u00e9. Original synchronisera le fichier d'origine, ind\u00e9pendamment de la capacit\u00e9 de l'appareil \u00e0 le lire.",
     "LabelDefaultStream": "(Par d\u00e9faut)",
     "LabelForcedStream": "(Forc\u00e9)",
     "LabelDefaultForcedStream": "(Par d\u00e9faut\/Forc\u00e9)",
@@ -644,6 +646,7 @@
     "WebClientTourUserPreferences4": "Configurer les images de fonds, les th\u00e8mes musicaux et les lecteurs externes",
     "WebClientTourMobile1": "Le client web fonctionne parfaitement sur les smartphones et les tablettes...",
     "WebClientTourMobile2": "et contr\u00f4le facilement les autres appareils et applications Media Browser",
+    "WebClientTourMySync": "Synchronisez vos m\u00e9dias personnels avec vos appareils pour les visionner en mode d\u00e9connect\u00e9.",
     "MessageEnjoyYourStay": "Amusez-vous bien !",
     "DashboardTourDashboard": "Le tableau de bord du serveur vous permet de g\u00e9rer votre serveur et vos utilisateurs. Vous saurez toujours qui fait quoi et o\u00f9.",
     "DashboardTourHelp": "L'aide contextuelle de l'application permet d'ouvrir les pages du wiki relatives au contenu affich\u00e9.",
@@ -655,6 +658,7 @@
     "DashboardTourNotifications": "Envoyez automatiquement les notifications d'\u00e9v\u00e9nements du serveur vers vos appareils mobiles,  vos adresses email et plus encore.",
     "DashboardTourScheduledTasks": "G\u00e9rez facilement les op\u00e9rations longues des taches planifi\u00e9es. Sp\u00e9cifiez quand et \u00e0 quelle fr\u00e9quence elles doivent se lancer.",
     "DashboardTourMobile": "Le tableau de bord de Media Browser fonctionne parfaitement sur les smartphones et les tablettes. G\u00e9rer votre serveur du bout des doigts, n'importe quand, n'importe o\u00f9.",
+    "DashboardTourSync": "Synchronisez vos m\u00e9dias personnels avec vos appareils pour les visionner en mode d\u00e9connect\u00e9.",
     "MessageRefreshQueued": "Demande d'actualisation en file d'attente",
     "TabDevices": "Appareils",
     "TabExtras": "Extras",
