--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/nb.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/nb.json
@@ -70,6 +70,7 @@
     "HeaderSelectCertificatePath": "Select Certificate Path",
     "ConfirmMessageScheduledTaskButton": "This operation normally runs automatically as a scheduled task. It can also be run manually here. To configure the scheduled task, see:",
     "HeaderSupporterBenefit": "A supporter membership provides additional benefits such as access to premium plugins, internet channel content, and more. {0}Learn more{1}.",
+    "LabelSyncNoTargetsHelp": "It looks like you don't currently have any apps that support sync.",
     "HeaderWelcomeToMediaBrowserServerDashboard": "Velkommen til Media Browser Dashbord",
     "HeaderWelcomeToMediaBrowserWebClient": "Velkommen til Media Browser Web Klient",
     "ButtonTakeTheTour": "Bli med p\u00e5 omvisning",
@@ -83,6 +84,7 @@
     "ButtonCancelItem": "Cancel item",
     "ButtonQueueForRetry": "Queue for retry",
     "ButtonReenable": "Re-enable",
+    "ButtonLearnMore": "L\u00e6re mer",
     "SyncJobItemStatusSyncedMarkForRemoval": "Marked for removal",
     "LabelAbortedByServerShutdown": "(Avbrutt av server shutdown)",
     "LabelScheduledTaskLastRan": "Sist kj\u00f8rt {0}, tar {1}.",
@@ -644,6 +646,7 @@
     "WebClientTourUserPreferences4": "Konfigurer bakgrunner, tema sanger og eksterne avspillere",
     "WebClientTourMobile1": "Webklienten fungerer bra p\u00e5 smarttelefoner og nettbrett ...",
     "WebClientTourMobile2": "og enkelt styrer andre enheter og mediabrowser apps",
+    "WebClientTourMySync": "Sync your personal media to your devices for offline viewing.",
     "MessageEnjoyYourStay": "Nyt oppholdet",
     "DashboardTourDashboard": "The server dashboard allows you to monitor your server and your users. You'll always know who is doing what and where they are.",
     "DashboardTourHelp": "In-app help provides easy buttons to open wiki pages relating to the on-screen content.",
@@ -655,6 +658,7 @@
     "DashboardTourNotifications": "Send meldinger automatisk for server handlinger til dine mobile enheter, epost, etc.",
     "DashboardTourScheduledTasks": "Administrer enkelt operasjoner som kan ta lang tid med oppgaveplanlegging. Bestem n\u00e5r de kj\u00f8rer og hvor ofte.",
     "DashboardTourMobile": "Media Browser dashboard fungerer fint p\u00e5 en smart telefon og nettbrett. Administrer din server fra din h\u00e5ndflate n\u00e5r som helst, hvor som helst.",
+    "DashboardTourSync": "Sync your personal media to your devices for offline viewing.",
     "MessageRefreshQueued": "Oppfrisk k\u00f8en",
     "TabDevices": "Enheter",
     "TabExtras": "Extras",
