--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/nl.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/nl.json
@@ -70,6 +70,7 @@
     "HeaderSelectCertificatePath": "Selecteer Certificaat Pad",
     "ConfirmMessageScheduledTaskButton": "Deze operatie loopt normaal gesproken automatisch als een geplande taak. Het kan hier ook handmatig worden uitgevoerd. Om de geplande taak te configureren, zie:",
     "HeaderSupporterBenefit": "Een supporter lidmaatschap biedt voordelen zoals toegang tot premium plug-ins, internet kanalen en meer. {0}Meer weten{1}.",
+    "LabelSyncNoTargetsHelp": "It looks like you don't currently have any apps that support sync.",
     "HeaderWelcomeToMediaBrowserServerDashboard": "Welkom bij het Media Browser Dashboard",
     "HeaderWelcomeToMediaBrowserWebClient": "Welkom op de Media Browser Web Client",
     "ButtonTakeTheTour": "Volg de tour",
@@ -83,6 +84,7 @@
     "ButtonCancelItem": "Annuleren item",
     "ButtonQueueForRetry": "Wachtrij voor opnieuw proberen",
     "ButtonReenable": "Opnieuw inschakelen",
+    "ButtonLearnMore": "Meer informatie",
     "SyncJobItemStatusSyncedMarkForRemoval": "Gemarkeerd voor verwijdering",
     "LabelAbortedByServerShutdown": "(Afgebroken door afsluiten van de server)",
     "LabelScheduledTaskLastRan": "Laatste keer {0}, duur {1}.",
@@ -644,6 +646,7 @@
     "WebClientTourUserPreferences4": "Configureer achtergronden, theme songs en externe spelers",
     "WebClientTourMobile1": "De web client werk perfect op smartphones en tablets...",
     "WebClientTourMobile2": "en kan elke andere Media Browser app bedienen",
+    "WebClientTourMySync": "Sync your personal media to your devices for offline viewing.",
     "MessageEnjoyYourStay": "Geniet van uw verblijf",
     "DashboardTourDashboard": "Het server-dashboard steld u in staat uw server en uw gebruikers te monitoren . U zult altijd weten wie wat doet en waar ze zijn.",
     "DashboardTourHelp": "De in-app hulp bevat handige knoppen om wiki pagina's te openen die gaan over de informatie op het scherm.",
@@ -655,6 +658,7 @@
     "DashboardTourNotifications": "Meldingen van de server gebeurtenissen automatisch verzenden naar uw mobiele apparaat, e-mail en meer.",
     "DashboardTourScheduledTasks": "Beheer eenvoudig langlopende transacties met geplande taken. Beslis zelf wanneer ze worden uitgevoerd en hoe vaak.",
     "DashboardTourMobile": "Het dashboard van Media Browser werkt geweldig op smartphones en tablets. Beheer je server vanuit de palm van je hand, overal en altijd.",
+    "DashboardTourSync": "Sync your personal media to your devices for offline viewing.",
     "MessageRefreshQueued": "Vernieuwen wachtrij",
     "TabDevices": "Apparaten",
     "TabExtras": "Extra's",
