--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/pt_BR.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/pt_BR.json
@@ -70,6 +70,7 @@
     "HeaderSelectCertificatePath": "Selecione o Caminho do Certificado",
     "ConfirmMessageScheduledTaskButton": "Esta opera\u00e7\u00e3o normalmente \u00e9 executada automaticamente como uma tarefa agendada. Tamb\u00e9m pode ser executada manualmente. Para configurar a tarefa agendada, veja:",
     "HeaderSupporterBenefit": "A ades\u00e3o de colaborador fornece benef\u00edcios adicionais como acesso a plugins premium, canais de conte\u00fado da internet e mais. {0}Saiba mais{1}.",
+    "LabelSyncNoTargetsHelp": "Parece que voc\u00ea n\u00e3o possui nenhuma app que suporta sincroniza\u00e7\u00e3o.",
     "HeaderWelcomeToMediaBrowserServerDashboard": "Bem Vindo ao Painel do Media Browser",
     "HeaderWelcomeToMediaBrowserWebClient": "Bem-vindo ao Cliente Web do Media Browser",
     "ButtonTakeTheTour": "Fa\u00e7a o tour",
@@ -83,6 +84,7 @@
     "ButtonCancelItem": "Cancelar item",
     "ButtonQueueForRetry": "Enfileirar para tentar novamente",
     "ButtonReenable": "Reativar",
+    "ButtonLearnMore": "Saiba mais",
     "SyncJobItemStatusSyncedMarkForRemoval": "Marcado para remo\u00e7\u00e3o",
     "LabelAbortedByServerShutdown": "(Abortada pelo desligamento do servidor)",
     "LabelScheduledTaskLastRan": "\u00daltima execu\u00e7\u00e3o {0}, demorando {1}.",
@@ -644,6 +646,7 @@
     "WebClientTourUserPreferences4": "Configure imagens de fundo, m\u00fasicas-tema e reprodutores externos",
     "WebClientTourMobile1": "O cliente web funciona perfeitamente em smartphones e tablets...",
     "WebClientTourMobile2": "e controle facilmente outros dispositivos e apps do Media Browser",
+    "WebClientTourMySync": "Sincronize sua m\u00eddia pessoal para seus dispositivos para assisti-la off-line.",
     "MessageEnjoyYourStay": "Divirta-se",
     "DashboardTourDashboard": "O painel do servidor permite monitorar seu servidor e seus usu\u00e1rios. Voc\u00ea sempre poder\u00e1 saber quem est\u00e1 fazendo o qu\u00ea e onde est\u00e3o.",
     "DashboardTourHelp": "A ajuda dentro da app fornece bot\u00f5es para abrir p\u00e1ginas wiki relacionadas ao conte\u00fado na tela.",
@@ -655,6 +658,7 @@
     "DashboardTourNotifications": "Envie, automaticamente, notifica\u00e7\u00f5es de eventos do servidor para seus dispositivos m\u00f3veis, email e mais.",
     "DashboardTourScheduledTasks": "Gerencie facilmente opera\u00e7\u00f5es longas com tarefas agendadas. Decida quando executar e com que frequ\u00eancia.",
     "DashboardTourMobile": "O painel do M\u00e9dia Browser funciona perfeitamente em smartphones e tablets. Gerencie seu servidor da palma de sua m\u00e3o, a qualquer hora e em qualquer lugar.",
+    "DashboardTourSync": "Sincronize sua m\u00eddia pessoal para seus dispositivos para assisti-la off-line.",
     "MessageRefreshQueued": "Atualiza\u00e7\u00e3o iniciada",
     "TabDevices": "Dispositivos",
     "TabExtras": "Extras",
