--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/sv.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/sv.json
@@ -57,7 +57,7 @@
     "SyncJobStatusReadyToTransfer": "Ready to Transfer",
     "SyncJobStatusTransferring": "Transferring",
     "SyncJobStatusCompletedWithError": "Synced with errors",
-    "SyncJobItemStatusReadyToTransfer": "Ready to Transfer",
+    "SyncJobItemStatusReadyToTransfer": "Redo att \u00f6verf\u00f6ras",
     "LabelCollection": "Collection",
     "HeaderAddToCollection": "L\u00e4gg till samling",
     "NewCollectionNameExample": "Exemple: Star Wars-samling",
@@ -70,12 +70,13 @@
     "HeaderSelectCertificatePath": "Select Certificate Path",
     "ConfirmMessageScheduledTaskButton": "This operation normally runs automatically as a scheduled task. It can also be run manually here. To configure the scheduled task, see:",
     "HeaderSupporterBenefit": "A supporter membership provides additional benefits such as access to premium plugins, internet channel content, and more. {0}Learn more{1}.",
+    "LabelSyncNoTargetsHelp": "It looks like you don't currently have any apps that support sync.",
     "HeaderWelcomeToMediaBrowserServerDashboard": "V\u00e4lkommen till Media Browsers kontrollpanel",
     "HeaderWelcomeToMediaBrowserWebClient": "V\u00e4lkommen till Media Browsers webbklient",
     "ButtonTakeTheTour": "Ta en rundtur",
     "HeaderWelcomeBack": "Welcome back!",
     "ButtonTakeTheTourToSeeWhatsNew": "Take the tour to see what's new",
-    "MessageNoSyncJobsFound": "No sync jobs found. Create sync jobs using the Sync buttons found throughout the web interface.",
+    "MessageNoSyncJobsFound": "Inga synkjobb hittades. Skapa synkjobb med hj\u00e4lp av Synk-knapparna som finns i hela gr\u00e4nssnittet.",
     "HeaderLibraryAccess": "Library Access",
     "HeaderChannelAccess": "Channel Access",
     "HeaderDeviceAccess": "Enhets\u00e5tkomst",
@@ -83,7 +84,8 @@
     "ButtonCancelItem": "Cancel item",
     "ButtonQueueForRetry": "Queue for retry",
     "ButtonReenable": "Re-enable",
-    "SyncJobItemStatusSyncedMarkForRemoval": "Marked for removal",
+    "ButtonLearnMore": "L\u00e4s mer",
+    "SyncJobItemStatusSyncedMarkForRemoval": "M\u00e4rkt f\u00f6r borttagning",
     "LabelAbortedByServerShutdown": "(avbr\u00f6ts eftersom servern st\u00e4ngdes av)",
     "LabelScheduledTaskLastRan": "Senast k\u00f6rd {0}, tog {1}",
     "HeaderDeleteTaskTrigger": "Ta bort aktivitetsutl\u00f6sare",
@@ -218,8 +220,8 @@
     "MessageConfirmRestart": "\u00c4r du s\u00e4ker p\u00e5 att du vill starta om Media Browser Server?",
     "MessageConfirmShutdown": "\u00c4r du s\u00e4ker p\u00e5 att du vill st\u00e4nga av Media Browser Server?",
     "ButtonUpdateNow": "Uppdatera nu",
-    "ValueItemCount": "{0} item",
-    "ValueItemCountPlural": "{0} items",
+    "ValueItemCount": "{0} objekt",
+    "ValueItemCountPlural": "{0} objekt",
     "NewVersionOfSomethingAvailable": "En ny version av {0} finns tillg\u00e4nglig!",
     "VersionXIsAvailableForDownload": "Version {0} finns tillg\u00e4nglig f\u00f6r h\u00e4mtning.",
     "LabelVersionNumber": "Version {0}",
@@ -644,6 +646,7 @@
     "WebClientTourUserPreferences4": "Anpassa fondbilder, ledmotiv och externa uppspelare",
     "WebClientTourMobile1": "Webbklienten fungerar perfekt p\u00e5 smarta telefoner och surfplattor...",
     "WebClientTourMobile2": "och kan enkelt fj\u00e4rrstyra andra enheter och Media Browser-appar",
+    "WebClientTourMySync": "Sync your personal media to your devices for offline viewing.",
     "MessageEnjoyYourStay": "Ha ett trevligt bes\u00f6k",
     "DashboardTourDashboard": "Via serverns kontrollpanel kan du \u00f6vervaka din server och alla anv\u00e4ndare. Du kommer alltid att kunna veta vem som g\u00f6r vad och var de \u00e4r.",
     "DashboardTourHelp": "In-app help provides easy buttons to open wiki pages relating to the on-screen content.",
@@ -655,6 +658,7 @@
     "DashboardTourNotifications": "Skicka automatiskt meddelanden om serverh\u00e4ndelser till din mobiltelefon, e-post och mycket mer.",
     "DashboardTourScheduledTasks": "Hantera enkelt tidskr\u00e4vande uppgifter med hj\u00e4lp av schemalagda aktiviteter. Best\u00e4m n\u00e4r de skall k\u00f6ras, och hur ofta.",
     "DashboardTourMobile": "Media Browsers kontrollpanel fungerar utm\u00e4rkt p\u00e5 smarta telefoner och surfplattor. Administrera din server n\u00e4r som helst, varifr\u00e5n som helst.",
+    "DashboardTourSync": "Sync your personal media to your devices for offline viewing.",
     "MessageRefreshQueued": "Uppdatering k\u00f6ad",
     "TabDevices": "Enheter",
     "TabExtras": "Extras",
@@ -689,7 +693,7 @@
     "ButtonLinkMyMediaBrowserAccount": "Link my account now",
     "MessageConnectAccountRequiredToInviteGuest": "In order to invite guests you need to first link your Media Browser account to this server.",
     "ButtonSync": "Synk",
-    "SyncMedia": "Sync Media",
+    "SyncMedia": "Synkronisera Media",
     "HeaderCancelSyncJob": "Cancel Sync",
     "CancelSyncJobConfirmation": "Are you sure you wish to cancel this sync job?",
     "TabSync": "Synk",
@@ -703,20 +707,20 @@
     "OptionMedium": "Medium",
     "OptionLow": "Low",
     "HeaderSettings": "Settings",
-    "OptionAutomaticallySyncNewContent": "Automatically sync new content",
-    "OptionAutomaticallySyncNewContentHelp": "New content added to this category will be automatically synced to the device.",
-    "OptionSyncUnwatchedVideosOnly": "Sync unwatched videos only",
-    "OptionSyncUnwatchedVideosOnlyHelp": "Only unwatched videos will be synced, and videos will be removed from the device as they are watched.",
+    "OptionAutomaticallySyncNewContent": "Synkronisera automatiskt nytt inneh\u00e5ll",
+    "OptionAutomaticallySyncNewContentHelp": "Nytt inneh\u00e5ll som l\u00e4ggs till i denna kategori kommer automatiskt synkroniseras till enheten.",
+    "OptionSyncUnwatchedVideosOnly": "Synkronisera endast osedda videos",
+    "OptionSyncUnwatchedVideosOnlyHelp": "Endast osedda videos kommer att synkroniseras, och videos kommer att tas bort fr\u00e5n enheten n\u00e4r de har tittats p\u00e5.",
     "LabelItemLimit": "Item limit:",
     "LabelItemLimitHelp": "Optional. Set a limit to the number of items that will be synced.",
     "MessageBookPluginRequired": "Requires installation of the Bookshelf plugin",
     "MessageGamePluginRequired": "Requires installation of the GameBrowser plugin",
     "MessageUnsetContentHelp": "Content will be displayed as plain folders. For best results use the metadata manager to set the content types of sub-folders.",
-    "SyncJobItemStatusQueued": "Queued",
-    "SyncJobItemStatusConverting": "Converting",
-    "SyncJobItemStatusTransferring": "Transferring",
-    "SyncJobItemStatusSynced": "Synced",
-    "SyncJobItemStatusFailed": "Failed",
-    "SyncJobItemStatusRemovedFromDevice": "Removed from device",
-    "SyncJobItemStatusCancelled": "Cancelled"
+    "SyncJobItemStatusQueued": "K\u00f6as",
+    "SyncJobItemStatusConverting": "Konverterar",
+    "SyncJobItemStatusTransferring": "\u00d6verf\u00f6r",
+    "SyncJobItemStatusSynced": "Synkad",
+    "SyncJobItemStatusFailed": "Misslyckades",
+    "SyncJobItemStatusRemovedFromDevice": "Borttagen fr\u00e5n enhet",
+    "SyncJobItemStatusCancelled": "Avbruten"
 }
