--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/zh_CN.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/zh_CN.json
@@ -70,6 +70,7 @@
     "HeaderSelectCertificatePath": "Select Certificate Path",
     "ConfirmMessageScheduledTaskButton": "\u6b64\u64cd\u4f5c\u901a\u5e38\u662f\u901a\u8fc7\u8ba1\u5212\u4efb\u52a1\u81ea\u52a8\u8fd0\u884c\u3002\u5b83\u4e5f\u53ef\u624b\u52a8\u8fd0\u884c\u3002\u8981\u914d\u7f6e\u8ba1\u5212\u4efb\u52a1\uff0c\u8bf7\u53c2\u9605\uff1a",
     "HeaderSupporterBenefit": "\u652f\u6301\u8005\u4f1a\u5458\u4f1a\u5f97\u5230\u989d\u5916\u7684\u597d\u5904\uff0c\u5982\u83b7\u5f97\u9ad8\u7ea7\u63d2\u4ef6\uff0c\u4e92\u8054\u7f51\u9891\u9053\u5185\u5bb9\uff0c\u7b49\u7b49\u3002{0}\u4e86\u89e3\u8be6\u60c5{1} \u3002",
+    "LabelSyncNoTargetsHelp": "It looks like you don't currently have any apps that support sync.",
     "HeaderWelcomeToMediaBrowserServerDashboard": "\u6b22\u8fce\u6765\u5230Media Browser\u63a7\u5236\u53f0",
     "HeaderWelcomeToMediaBrowserWebClient": "\u6b22\u8fce\u8fdb\u5165Media Browser Web\u5ba2\u6237\u7aef",
     "ButtonTakeTheTour": "\u8fdb\u884c\u53c2\u89c2",
@@ -83,6 +84,7 @@
     "ButtonCancelItem": "\u53d6\u6d88\u9879\u76ee",
     "ButtonQueueForRetry": "\u91cd\u8bd5\u961f\u5217",
     "ButtonReenable": "\u91cd\u65b0\u542f\u7528",
+    "ButtonLearnMore": "\u4e86\u89e3\u66f4\u591a",
     "SyncJobItemStatusSyncedMarkForRemoval": "\u6807\u8bb0\u4e3a\u5220\u9664",
     "LabelAbortedByServerShutdown": "(\u56e0\u4e3a\u670d\u52a1\u5668\u5173\u95ed\u88ab\u4e2d\u6b62)",
     "LabelScheduledTaskLastRan": "\u6700\u540e\u8fd0\u884c {0}, \u82b1\u8d39\u65f6\u95f4 {1}.",
@@ -644,6 +646,7 @@
     "WebClientTourUserPreferences4": "\u914d\u7f6e\u80cc\u666f\u3001\u4e3b\u9898\u6b4c\u548c\u5916\u90e8\u64ad\u653e\u5668",
     "WebClientTourMobile1": "The web client works great on smartphones and tablets...",
     "WebClientTourMobile2": "and easily controls other devices and Media Browser apps",
+    "WebClientTourMySync": "Sync your personal media to your devices for offline viewing.",
     "MessageEnjoyYourStay": "Enjoy your stay",
     "DashboardTourDashboard": "The server dashboard allows you to monitor your server and your users. You'll always know who is doing what and where they are.",
     "DashboardTourHelp": "In-app help provides easy buttons to open wiki pages relating to the on-screen content.",
@@ -655,6 +658,7 @@
     "DashboardTourNotifications": "Automatically send notifications of server events to your mobile device, email and more.",
     "DashboardTourScheduledTasks": "Easily manage long running operations with scheduled tasks. Decide when they run, and how often.",
     "DashboardTourMobile": "The Media Browser dashboard works great on smartphones and tablets. Manage your server from the palm of your hand anytime, anywhere.",
+    "DashboardTourSync": "Sync your personal media to your devices for offline viewing.",
     "MessageRefreshQueued": "Refresh queued",
     "TabDevices": "\u8bbe\u5907",
     "TabExtras": "Extras",
