--- a/MediaBrowser.Server.Implementations/Localization/Server/zh_CN.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/zh_CN.json
@@ -891,7 +891,7 @@
     "MessageNoPlaylistsAvailable": "\u64ad\u653e\u5217\u8868\u5141\u8bb8\u60a8\u521b\u5efa\u4e00\u4e2a\u5185\u5bb9\u5217\u8868\u6765\u8fde\u7eed\u64ad\u653e\u3002\u5c06\u9879\u76ee\u6dfb\u52a0\u5230\u64ad\u653e\u5217\u8868\uff0c\u53f3\u952e\u5355\u51fb\u6216\u70b9\u51fb\u5e76\u6309\u4f4f\uff0c\u7136\u540e\u9009\u62e9\u201c\u6dfb\u52a0\u5230\u64ad\u653e\u5217\u8868\u201d\u3002",
     "MessageNoPlaylistItemsAvailable": "\u64ad\u653e\u5217\u8868\u76ee\u524d\u662f\u7a7a\u7684\u3002",
     "ButtonDismiss": "\u89e3\u6563",
-    "ButtonEditOtherUserPreferences": "\u7f16\u8f91\u7528\u6237\u914d\u7f6e\u6587\u4ef6\uff0c\u5bc6\u7801\u548c\u4e2a\u4eba\u504f\u597d\u8bbe\u7f6e\u3002",
+    "ButtonEditOtherUserPreferences": "Edit this user's profile, image and personal preferences.",
     "LabelChannelStreamQuality": "\u9996\u9009\u7684\u4e92\u8054\u7f51\u6d41\u5a92\u4f53\u8d28\u91cf\uff1a",
     "LabelChannelStreamQualityHelp": "\u5728\u4f4e\u5e26\u5bbd\u73af\u5883\u4e0b\uff0c\u9650\u5236\u8d28\u91cf\u6709\u52a9\u4e8e\u786e\u4fdd\u987a\u7545\u7684\u6d41\u5a92\u4f53\u4f53\u9a8c\u3002",
     "OptionBestAvailableStreamQuality": "\u6700\u597d\u7684",
