--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/de.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/de.json
@@ -70,6 +70,7 @@
     "HeaderSelectCertificatePath": "W\u00e4hlen Sie einen Zertifikat Ordner",
     "ConfirmMessageScheduledTaskButton": "Diese Aufgabe l\u00e4uft normalerweise automatisch als geplante Aufgabe. Sie kann jedoch auch manuell von hier gestartet werden. F\u00fcr Einstellungen der geplanten Aufgaben schauen Sie hier:",
     "HeaderSupporterBenefit": "Eine Unterst\u00fctzer-Mitgliedschaft bietet weitere Vorteile, wie z.B. den Zugriff auf premium Plugins, weitere Internet-Channels und mehr. {0}Erfahren Sie mehr{1}.",
+    "LabelSyncNoTargetsHelp": "Es sieht so aus als w\u00fcrden Sie aktuell keine Apps verwenden, die Synchronisation unterst\u00fctzen.",
     "HeaderWelcomeToMediaBrowserServerDashboard": "Willkommen zur Media Browser \u00dcbersicht",
     "HeaderWelcomeToMediaBrowserWebClient": "Willkommen zum Media Browser Web Client",
     "ButtonTakeTheTour": "Mache die Tour",
@@ -83,6 +84,7 @@
     "ButtonCancelItem": "Datei abw\u00e4hlen",
     "ButtonQueueForRetry": "F\u00fcr Wiederholung in die Warteschlange setzen",
     "ButtonReenable": "Reaktivierung",
+    "ButtonLearnMore": "Erfahre mehr",
     "SyncJobItemStatusSyncedMarkForRemoval": "F\u00fcr L\u00f6schung markiert",
     "LabelAbortedByServerShutdown": "(Durch herunterfahrenden Server abgebrochen)",
     "LabelScheduledTaskLastRan": "Zuletzt ausgef\u00fchrt vor: {0}. Ben\u00f6tigte Zeit: {1}.",
@@ -644,6 +646,7 @@
     "WebClientTourUserPreferences4": "Konfiguriere Hintergr\u00fcnde, Titelsongs und externe Abspieler",
     "WebClientTourMobile1": "Der Web-Client funktioniert hervorragend auf Smartphones und Tablets ...",
     "WebClientTourMobile2": "und steuert einfach andere Ger\u00e4te und Media Browser Anwendungen",
+    "WebClientTourMySync": "Synchronisieren Sie pers\u00f6nliche Medien mit Ihren Ger\u00e4ten um diese offline anzuschauen.",
     "MessageEnjoyYourStay": "Genie\u00dfe deinen Aufenthalt",
     "DashboardTourDashboard": "Die Server\u00fcbersicht erlaubt es dir deinen Server und dessen Benutzer im Blick zu behalten. Somit wei\u00dft du immer wer gerade was macht und wo er sich befindet.",
     "DashboardTourHelp": "Die In-App-Hilfe Schaltfl\u00e4che bietet eine schnelle M\u00f6glichkeit um eine Wiki-Seite zum aktuellen Inhalt zu \u00f6ffnen.",
@@ -655,6 +658,7 @@
     "DashboardTourNotifications": "Sende automatisch Benachrichtigungen von Serverereignissen auf dein mobiles Endger\u00e4t, per E-Mail und mehr.",
     "DashboardTourScheduledTasks": "Verwalte einfach lang dauernde Aufgaben mit Hilfe von geplanten Aufgaben. Entscheide wann diese ausgef\u00fchrt werden und wie oft.",
     "DashboardTourMobile": "Die Media Browser \u00dcbersicht funktioniert auch hervorragend auf Smartphones und Tablets. Verwalte deinen Server jederzeit und \u00fcberall  direkt von deiner Handfl\u00e4che aus.",
+    "DashboardTourSync": "Synchronisieren Sie pers\u00f6nliche Medien mit Ihren Ger\u00e4ten um diese offline anzuschauen.",
     "MessageRefreshQueued": "Warteschlange aktualisieren",
     "TabDevices": "Ger\u00e4te",
     "TabExtras": "Extras",
