--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/it.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/it.json
@@ -70,6 +70,7 @@
     "HeaderSelectCertificatePath": "Seleziona il percorso del Certificato",
     "ConfirmMessageScheduledTaskButton": "L'operazione viene normalmente eseguita come operazione pianificata. Pu\u00f2 anche essere avviata manualmente da qui. Per configurare le operazioni pianificate, vedi:",
     "HeaderSupporterBenefit": "La sottoscrizione Supporter concede dei benefici come: l'accesso a plug-in premium, contenuti dei canali internet, e altro. {0}Scopri di pi\u00f9{1}",
+    "LabelSyncNoTargetsHelp": "It looks like you don't currently have any apps that support sync.",
     "HeaderWelcomeToMediaBrowserServerDashboard": "Benvenuti nel Dashboard di Media Browser",
     "HeaderWelcomeToMediaBrowserWebClient": "Benvenuti nel Media Browser Web client",
     "ButtonTakeTheTour": "Fai il tour",
@@ -83,6 +84,7 @@
     "ButtonCancelItem": "Cancella oggetto",
     "ButtonQueueForRetry": "In attesa di riprovare",
     "ButtonReenable": "Ri-abilita",
+    "ButtonLearnMore": "saperne di pi\u00f9",
     "SyncJobItemStatusSyncedMarkForRemoval": "Selezionato per la rimozione",
     "LabelAbortedByServerShutdown": "(Interrotto dallo spegnimento del server)",
     "LabelScheduledTaskLastRan": "Ultima esecuzione  {0}, taking {1}.",
@@ -644,6 +646,7 @@
     "WebClientTourUserPreferences4": "Configurare fondali, sigle e lettori esterni",
     "WebClientTourMobile1": "Il client web funziona alla grande su smartphone e tablet ...",
     "WebClientTourMobile2": "e controlla facilmente altri dispositivi e applicazioni Media Browser",
+    "WebClientTourMySync": "Sync your personal media to your devices for offline viewing.",
     "MessageEnjoyYourStay": "Godetevi il vostro soggiorno",
     "DashboardTourDashboard": "Il pannello di controllo del server consente di monitorare il vostro server e gli utenti. Potrai sempre sapere chi sta facendo cosa e dove sono.",
     "DashboardTourHelp": "In-app help offre pulsanti facili da aprire le pagine wiki relative al contenuto sullo schermo.",
@@ -655,6 +658,7 @@
     "DashboardTourNotifications": "Inviare automaticamente notifiche di eventi server al vostro dispositivo mobile, e-mail e altro ancora.",
     "DashboardTourScheduledTasks": "Gestire facilmente le operazioni di lunga esecuzione con le operazioni pianificate. Decidere quando corrono, e con quale frequenza.",
     "DashboardTourMobile": "Il cruscotto Media Browser funziona alla grande su smartphone e tablet. Gestisci il tuo server dal palmo della tua mano in qualsiasi momento, ovunque.",
+    "DashboardTourSync": "Sync your personal media to your devices for offline viewing.",
     "MessageRefreshQueued": "Aggiornamento programmato",
     "TabDevices": "Dispositivi",
     "TabExtras": "Extra",
