--- a/MediaBrowser.Server.Implementations/Localization/Server/fr.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/fr.json
@@ -891,7 +891,7 @@
     "MessageNoPlaylistsAvailable": "Les listes de lectures vous permettent de cr\u00e9er des listes de contenus \u00e0 lire en continu en une fois. Pour ajouter un \u00e9l\u00e9ment \u00e0 la liste, faire un clic droit ou appuyer et maintenez, puis s\u00e9lectionnez Ajouter \u00e0 la liste de lecture",
     "MessageNoPlaylistItemsAvailable": "Cette liste de lecture est actuellement vide.",
     "ButtonDismiss": "Annuler",
-    "ButtonEditOtherUserPreferences": "Modifier ce profil utilisateur, mot de passe et pr\u00e9f\u00e9rences personnelles.",
+    "ButtonEditOtherUserPreferences": "Modifier ce profil utilisateur, son avatar et ses pr\u00e9f\u00e9rences personnelles.",
     "LabelChannelStreamQuality": "Qualit\u00e9 de diffusion internet pr\u00e9f\u00e9r\u00e9e :",
     "LabelChannelStreamQualityHelp": "Avec une bande passante faible, limiter la qualit\u00e9 garantit un confort d'utilisation du streaming.",
     "OptionBestAvailableStreamQuality": "Meilleur disponible",
