--- a/MediaBrowser.Server.Implementations/Localization/Server/pt_BR.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/pt_BR.json
@@ -891,7 +891,7 @@
     "MessageNoPlaylistsAvailable": "Listas de reprodu\u00e7\u00e3o permitem criar listas com conte\u00fado para reproduzir consecutivamente, de uma s\u00f3 vez. Para adicionar itens \u00e0s listas de reprodu\u00e7\u00e3o, clique com o bot\u00e3o direito ou toque a tela por alguns segundos, depois selecione Adicionar \u00e0 Lista de Reprodu\u00e7\u00e3o.",
     "MessageNoPlaylistItemsAvailable": "Esta lista de reprodu\u00e7\u00e3o est\u00e1 vazia.",
     "ButtonDismiss": "Descartar",
-    "ButtonEditOtherUserPreferences": "Editar este perfil de usu\u00e1rio, senha e prefer\u00eancias pessoais.",
+    "ButtonEditOtherUserPreferences": "Editar este perfil de usu\u00e1rio, imagem e prefer\u00eancias pessoais.",
     "LabelChannelStreamQuality": "Qualidade preferida do stream de internet:",
     "LabelChannelStreamQualityHelp": "Em um ambiente com banda larga de pouca velocidade, limitar a qualidade pode ajudar a assegurar um streaming mais flu\u00eddo.",
     "OptionBestAvailableStreamQuality": "Melhor dispon\u00edvel",
